fix align firefox

--- a/client/app/espace_perso/mes_profils/profil/liste_demandes.scss
+++ b/client/app/espace_perso/mes_profils/profil/liste_demandes.scss
@@ -30,12 +30,18 @@
 
   .list-group-item-nouvelle-demande {
     background-color: $flat-ui-blue;
+    display: table;
 
     h3 {
       color: white;
     }
 
+    span {
+      display: table-cell;
+    }
+
     i.fa {
+      display: table-cell;
       color: white;
     }
 
